# libaxolotlsd

./: .gitignore  CMakeLists.txt  README.md
include/: axolotlsd.hpp  axolotlsd_configuration.txt
share/pkgconfig/: axolotlsd.pc.in
src/: axolotlsd.cpp
